J'ai tenté un truc de dingue ça marche pas très bien